// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu renders content at bottom-start as default placement 1`] = `
.c3 {
  background-color: #fff;
  color: #001833;
  border-radius: 6px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c1 * {
  box-sizing: border-box;
}

.c0 {
  display: inline-block;
  padding: 8px;
  width: 650px;
  border-radius: 6px;
  box-sizing: border-box;
  max-width: 650px;
  width: 100%;
  z-index: 1600;
}

.c2 {
  box-sizing: border-box;
  box-shadow: 0 0 0 1px #c0cad5,0 0 4px 0 rgba(0,0,0,0.08),0 8px 8px 0 rgba(0,0,0,0.08),0 16px 16px 0 rgba(0,0,0,0.08);
  font-size: 12px;
  max-width: 100%;
  outline: 0;
  border-radius: 6px;
}

.c4 {
  width: singleColumn;
  height: singleColumn;
  padding: 8px;
  padding-bottom: 4px;
  padding-right: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  overflow-y: auto;
  max-height: 100%;
}

.c4 > * {
  margin-right: 4px;
  margin-bottom: 4px;
}

.c4 > * {
  width: 100%;
}

.c5 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  border-radius: 2px;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #0068ef;
  color: #fff;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border: 2px solid transparent;
  color: #001833;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  outline: none;
  padding: 12px;
  border-radius: 2px;
}

.c5:hover {
  background-color: #049;
  color: #fff;
}

.c5:focus {
  outline: 0px solid #049;
  box-shadow: 0 0 0 2px #049;
}

.c5:disabled {
  cursor: not-allowed;
  color: #4f6f8f;
  background-color: #edf0f3;
}

.c5:hover {
  background-color: #edf0f3;
  color: #001833;
}

.c5:hover .c7 {
  color: #049;
}

<div
  aria-controls="menu"
  aria-describedby="dialog-description-1"
  class="c0"
  data-placement="bottom-start"
  display="inline-block"
  role="dialog"
  style="position: absolute; top: 8px; left: 8px;"
  tabindex="-1"
  width="650px"
>
  <div
    class="c1"
  >
    <section
      class="c2"
      data-testid="popover-content-container"
      tabindex="-1"
      width="650px"
    >
      <div
        class="c3"
        color="background.lightest"
        data-testid="dialog-content"
        id="popover-description-1"
        tabindex="-1"
      >
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="0"
        />
        <div
          data-focus-lock-disabled="false"
        >
          <div
            class="c4"
            id="menu"
            role="listbox"
          >
            <button
              class="c5"
              color="primary"
              id="option0"
              role="option"
            >
              <div
                class="c6"
              >
                Item One
              </div>
            </button>
            <button
              class="c5"
              color="primary"
              id="option1"
              role="option"
            >
              <div
                class="c6"
              >
                Item Two
              </div>
            </button>
          </div>
        </div>
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="0"
        />
      </div>
    </section>
  </div>
</div>
`;

exports[`Menu renders content with custom placement 1`] = `
.c3 {
  background-color: #fff;
  color: #001833;
  border-radius: 6px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c1 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c1 * {
  box-sizing: border-box;
}

.c0 {
  display: inline-block;
  padding: 8px;
  width: 650px;
  border-radius: 6px;
  box-sizing: border-box;
  max-width: 650px;
  width: 100%;
  z-index: 1600;
}

.c2 {
  box-sizing: border-box;
  box-shadow: 0 0 0 1px #c0cad5,0 0 4px 0 rgba(0,0,0,0.08),0 8px 8px 0 rgba(0,0,0,0.08),0 16px 16px 0 rgba(0,0,0,0.08);
  font-size: 12px;
  max-width: 100%;
  outline: 0;
  border-radius: 6px;
}

.c4 {
  width: singleColumn;
  height: singleColumn;
  padding: 8px;
  padding-bottom: 4px;
  padding-right: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  overflow-y: auto;
  max-height: 100%;
}

.c4 > * {
  margin-right: 4px;
  margin-bottom: 4px;
}

.c4 > * {
  width: 100%;
}

.c5 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 700;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  border-radius: 2px;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #0068ef;
  color: #fff;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fff;
  border: 2px solid transparent;
  color: #001833;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  outline: none;
  padding: 12px;
  border-radius: 2px;
}

.c5:hover {
  background-color: #049;
  color: #fff;
}

.c5:focus {
  outline: 0px solid #049;
  box-shadow: 0 0 0 2px #049;
}

.c5:disabled {
  cursor: not-allowed;
  color: #4f6f8f;
  background-color: #edf0f3;
}

.c5:hover {
  background-color: #edf0f3;
  color: #001833;
}

.c5:hover .c7 {
  color: #049;
}

<div
  aria-controls="menu"
  aria-describedby="dialog-description-1"
  class="c0"
  data-placement="bottom"
  display="inline-block"
  role="dialog"
  style="position: absolute; top: 8px; left: 8px;"
  tabindex="-1"
  width="650px"
>
  <div
    class="c1"
  >
    <section
      class="c2"
      data-testid="popover-content-container"
      tabindex="-1"
      width="650px"
    >
      <div
        class="c3"
        color="background.lightest"
        data-testid="dialog-content"
        id="popover-description-1"
        tabindex="-1"
      >
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="0"
        />
        <div
          data-focus-lock-disabled="false"
        >
          <div
            class="c4"
            id="menu"
            role="listbox"
          >
            <button
              class="c5"
              color="primary"
              id="option0"
              role="option"
            >
              <div
                class="c6"
              >
                Item One
              </div>
            </button>
            <button
              class="c5"
              color="primary"
              id="option1"
              role="option"
            >
              <div
                class="c6"
              >
                Item Two
              </div>
            </button>
          </div>
        </div>
        <div
          data-focus-guard="true"
          style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
          tabindex="0"
        />
      </div>
    </section>
  </div>
</div>
`;
